syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "QueryHeader.proto";
import "ResponseHeader.proto";
import "ConsensusTopicInfo.proto";

// See [ConsensusService.getTopicInfo()](#proto.ConsensusService)
message ConsensusGetTopicInfoQuery {
    // Standard info sent from client to node, including the signed payment, and what kind of response is requested
    // (cost, state proof, both, or neither).
    QueryHeader header = 1;

    // The Topic for which information is being requested
    TopicID topicID = 2;
}

// Retrieve the parameters of and state of a consensus topic.
message ConsensusGetTopicInfoResponse {
    // Standard response from node to client, including the requested fields: cost, or state proof, or both, or neither.
    ResponseHeader header = 1;

    TopicID topicID = 2; // Topic identifier.

    ConsensusTopicInfo topicInfo = 5; // Current state of the topic
}
